<resources>
    <string name="app_name">Team1-PersonalBest</string>
    <string name="start_walk_run_now">Start Walk/Run Now</string>
    <string name="step_history">Step History</string>
    <string name="step_goal">Step Goal:</string>
    <string name="daily_step">Daily Step:</string>
    <string name="end_walk_run_now">End Walk/Run Now</string>
    <string name="distance">Distance:</string>
    <string name="speed">Speed:</string>
    <string name="exercise_step">Exercise Step:</string>
    <string name="set_goal">Congratulations!\nDo You Want to Set a New Step Goal?</string>
    <string name="yes">Yes</string>
    <string name="not_now">Not Now</string>
    <string name="cancel">Cancel</string>
    <string name="suggested_goal">Suggested New Step Goal:</string>
    <string name="steps">Steps</string>
    <string name="customize_goal">Customize Goal</string>
    <string name="accept">Accept</string>
    <string name="enter_number">Enter Number</string>
    <string name="custom_goal">Please Enter Your New Goal:</string>
    <string name="time_elapsed">Time Elapsed</string>
    <string name="set_new_goal">Set New Goal</string>
    <string name="friends">"Friends:"</string>
    <string name="back">Back</string>
    <string name="add_friend">Add Friend</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <string name="friend_email">"Friend's Email"</string>
    <string name="send">Send</string>
    <string name="enter_friend_email">"Enter Friend's Email"</string>
    <string name="send_message">"Send Message"</string>
    <string name="Activity">"Activity"</string>
    <string name="message">"Message:"</string>
    <string name="action_settings">Settings</string>
    <string name="friendslist">"Friends List"</string>
</resources>
