<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ActivityOfFriendActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/FriendName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/buttonToMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/send_message"
        android:backgroundTint="#F44336"
        android:textColor="#ffffff"
        />

    <Button
        android:id="@+id/friendHistoryButton"
        android:layout_width="118dp"
        android:layout_height="35dp"
        android:background="@color/colorPrimary"
        android:text="History"
        android:textColor="@color/common_google_signin_btn_text_dark_default" />

    <Button
        android:id="@+id/buttonBackFriendList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/back"
        android:textColor="#ffffff" />


</LinearLayout>